--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-E:\MyProgram_Documents\myPython\python_spider\爬虫VIP课程十期直播内容
-E:\MyProgram_Documents\myPython\python_spider\爬虫VIP课程十一期直播内容
+python_spider\爬虫VIP课程十期直播内容
+python_spider\爬虫VIP课程十一期直播内容
 .idea
